--- a/src/main/resources/static/css/main/layout.css
+++ b/src/main/resources/static/css/main/layout.css
@@ -798,6 +798,9 @@ figure.instagram-item img.insta-image {
 
 /* 8. Footer
 /*----------------------------------------------*/
+.footer_main {
+
+}
 /*------------ Social Icon -----------*/
 .social-links svg {
     width: 20px;
