--- a/src/main/resources/templates/book/book_detail.html
+++ b/src/main/resources/templates/book/book_detail.html
@@ -32,12 +32,11 @@
                     <div class="pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom"
                          style="width: 100%; padding-left:10px;">
                         <h6>정가</h6>
-                        <del th:text="${#numbers.formatInteger(book.price, 0, 'COMMA')} + ' 원'"></del>
+                        <del th:text="${book.price  + ' 원'}"></del>
                         <br>
                         <h6>할인가</h6>
                         <div class="d-flex" style="color:red;">
-                            <div style="margin-right:10px;"
-                                 th:text="${#numbers.formatInteger(book.discountPrice, 0, 'COMMA')} + ' 원'"></div>
+                            <div style="margin-right:10px;" th:text="${book.discountPrice}  + ' 원'"></div>
                             <div th:text=" ' ( ' + ${book.discount} +'  % 할인' + ' ) ' "></div>
                         </div>
                     </div>
@@ -76,17 +75,16 @@
             </div>
         </div>
         <div class="book_middle-section">
-            <div id="header" class="book_navbar header-scrolled text-black bg-light">
+            <nav class="book_navbar header-scrolled text-black bg-light">
                 <div class="book_nav-container">
-                    <a href="#ebook_info" class="card-body btn btn-light" onclick="activateSection('ebook_info')">
+                    <a href="#ebook_info" class="card-body btn btn-light">
                         도서정보
                     </a>
-                    <a href="#review_info" class="card-body btn btn-light" onclick="activateSection('review_info')">
+                    <a href="#review_info" class="card-body btn btn-light">
                         리뷰
                     </a>
                     <div class="card-body" style="font-size:20px; color: red;">
-                        <div class="card-text" style="white-space: pre-line;"
-                             th:text="${#numbers.formatInteger(book.discountPrice, 0, 'COMMA')} + ' 원'"></div>
+                        <div class="card-text" style="white-space: pre-line;" th:text="${book.discountPrice + ' 원'}"></div>
                     </div>
                     <div style="margin-bottom:5px" class="justify-content-end">
                         <a class="btn btn-sm btn-primary" style="width: 100px; margin-right:10px;">바로구매</a>
@@ -95,7 +93,7 @@
                             담기</a>
                     </div>
                 </div>
-            </div>
+            </nav>
             <div id="ebook_info" class="book_info">
                 <div class="title_book" style="padding-top:5px;">
                     <h5>판매자</h5>
@@ -139,8 +137,8 @@
                     <div class="review_form mb-3">
                         <label for="content" class="form-label"></label>
                         <form th:action="@{|/review/create/${book.id}|}" method="post">
-        <textarea name="content" id="content" class="form-control" rows="3"
-                  placeholder="책에 대한 스포일러 및 심한 욕설은 제외됩니다"></textarea>
+                            <textarea name="content" id="content" class="form-control" rows="3"
+                             placeholder="책에 대한 스포일러 및 심한 욕설은 제외됩니다"></textarea>
                             <div class="rating">
                                 <input type="hidden" name="rating" id="rating-value" value="0">
                                 <span class="star" data-value="1">&#9733;</span>
@@ -158,12 +156,11 @@
                     <div class="a_comment_top">
                         <ul th:each="review : ${reviewList}">
                             <li>
-                                <div id="review_info"
+                                <div
                                      class="pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom"
                                      style="width: 100%;">
                                     <div class="review-box mb-2">
-                                        <span>평점: <span th:utext="|&#9733;| + ${review.rating}"
-                                                        class="star"></span></span>
+                                        <span>평점: <span th:utext="|&#9733;| + ${review.rating}" class="star"></span></span>
                                         <div style="display:flex;" th:text="${review.author.username}"></div>
                                         <div style="display:flex; justify-content:end; padding-right:10px;"
                                              th:text="${#temporals.format(review.createDate, 'yyyy-MM-dd ')}"></div>
@@ -173,18 +170,13 @@
                                             <span th:text="${review.content}"></span>
                                         </div>
                                         <!-- 수정 버튼 -->
-                                        <button sec:authorize="isAuthenticated()"
-                                                class="btn btn-sm btn-primary btn-edit"
-                                                style="width: 100px; margin-right:10px;">수정
-                                        </button>
+                                        <button sec:authorize="isAuthenticated()" class="btn btn-sm btn-primary btn-edit" style="width: 100px; margin-right:10px;">수정</button>
                                         <!-- 삭제 버튼 -->
-                                        <a th:href="@{|/review/delete/${review.id}|}" sec:authorize="isAuthenticated()"
-                                           class="btn btn-sm btn-primary"
+                                        <a th:href="@{|/review/delete/${review.id}|}" sec:authorize="isAuthenticated()" class="btn btn-sm btn-primary"
                                            style="width: 100px; margin-right:10px; margin-top:20px;">삭제</a>
 
                                         <!-- 댓글 모달 버튼 -->
-                                        <button sec:authorize="isAuthenticated()" type="button"
-                                                class="btn btn-sm btn-outline-secondary reportReview"
+                                        <button sec:authorize="isAuthenticated()" type="button" class="btn btn-sm btn-outline-secondary reportReview"
                                                 data-bs-toggle="modal"
                                                 data-bs-target="#reportReviewModal"
                                                 th:data-review-id="${review.id}"
@@ -194,21 +186,17 @@
                                         <!-- 리뷰 수정 폼 -->
                                         <div class="review-edit-form">
                                             <h5 class="my-3 border-bottom pb-2">리뷰수정</h5>
-                                            <form th:action="@{|/review/modify/${review.id}|}" th:object="${reviewForm}"
-                                                  method="post">
-                                                <input type="hidden" th:name="${_csrf.parameterName}"
-                                                       th:value="${_csrf.token}"/>
+                                            <form th:action="@{|/review/modify/${review.id}|}" th:object="${reviewForm}" method="post">
+                                                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
                                                 <div class="mb-3">
                                                     <label for="content" class="form-label">내용</label>
-                                                    <textarea name="content" id="content" class="form-control" rows="10"
-                                                              th:text="${review.content}"></textarea>
+                                                    <textarea name="content" id="content" class="form-control" rows="10" th:text="${review.content}"></textarea>
                                                 </div>
                                                 <div class="mb-3">
                                                     <label for="modify-rating" class="form-label">평점</label>
                                                     <div class="rating" id="modify-rating">
                                                         <!-- 수정 시에도 별점을 선택할 수 있는 별 아이콘 -->
-                                                        <input type="hidden" name="rating" id="modify-rating-value"
-                                                               value="0">
+                                                        <input type="hidden" name="rating" id="modify-rating-value" value="0">
                                                         <span class="star" data-value="1">&#9733;</span>
                                                         <span class="star" data-value="2">&#9733;</span>
                                                         <span class="star" data-value="3">&#9733;</span>
@@ -232,16 +220,14 @@
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <h1 class="modal-title fs-5" id="reportModalReview">신고내용</h1>
-                                    <button aria-label="Close" class="btn-close" data-bs-dismiss="modal"
-                                            type="button"></button>
+                                    <button aria-label="Close" class="btn-close" data-bs-dismiss="modal" type="button"></button>
                                 </div>
                                 <form class="was-validated" method="post" th:action="@{|/review/report/${book.id}|}">
                                     <div class="modal-body">
                                         <input type="hidden" id="reviewId" name="reviewId">
                                         <div class="mb-3">
                                             <label class="col-form-label" for="validationTextareaComment">내용</label>
-                                            <textarea class="form-control" id="validationTextareaComment"
-                                                      name="reportContent"
+                                            <textarea class="form-control" id="validationTextareaComment" name="reportContent"
                                                       placeholder="내용을 입력해주세요." required></textarea>
                                         </div>
 
@@ -266,11 +252,8 @@
                                         </div>
 
                                         <div class="modal-footer">
-                                            <button class="btn btn-secondary" data-bs-dismiss="modal" type="button">
-                                                Close
-                                            </button>
-                                            <button class="btn btn-primary" onclick="handleRadioSelection()"
-                                                    type="submit">신고 보내기
+                                            <button class="btn btn-secondary" data-bs-dismiss="modal" type="button">Close</button>
+                                            <button class="btn btn-primary" onclick="handleRadioSelection()" type="submit">신고 보내기
                                             </button>
                                         </div>
                                     </div>
@@ -315,12 +298,12 @@
                     </script>
                     <script>
                         document.addEventListener('DOMContentLoaded', function () {
-    const reviewStars = document.querySelectorAll('.review_form .star'); // 리뷰 작성 별점
-    const modifyStars = document.querySelectorAll('.a_comment_top .star'); // 리뷰 수정 별점
+                        const reviewStars = document.querySelectorAll('.review_form .star'); // 리뷰 작성 별점
+                        const modifyStars = document.querySelectorAll('.a_comment_top .star'); // 리뷰 수정 별점
 
-    reviewStars.forEach(star => {
-        star.addEventListener('mouseover', () => {
-            const value = parseInt(star.getAttribute('data-value'));
+                         reviewStars.forEach(star => {
+                         star.addEventListener('mouseover', () => {
+                        const value = parseInt(star.getAttribute('data-value'));
 
             // 선택된 별의 인덱스까지만 활성화
             reviewStars.forEach((s, index) => {
