--- a/src/main/resources/templates/coupon/coupon_list.html
+++ b/src/main/resources/templates/coupon/coupon_list.html
@@ -19,15 +19,17 @@
                                     <div class="card-body">
                                         <p class="card-text" th:text="${coupon.title}"></p>
                                         <div class="card-text" th:text="${coupon.content}"></div>
-                                        <div class="card-text" th:text="${#numbers.formatInteger(coupon.discount_price, 0, 'COMMA')} + ' 원'"></div>
+                                        <div class="card-text"
+                                             th:text="${#numbers.formatInteger(coupon.discount_price, 0, 'COMMA')} + ' 원'"></div>
                                         <div class="d-flex justify-content-between align-items-center">
                                             <div class="btn-group" sec:authorize="hasRole('ADMIN')">
                                                 <a th:href="@{|/coupon/delete/${coupon.id}|}" type="button"
                                                    class="btn btn-sm btn-outline-secondary">삭제</a>
                                             </div>
                                             <div class="d-flex justify-content-end">
-                                                <a th:href="@{|/coupon/add/${coupon.id}|}" class="btn btn-sm btn-primary couponBtn"
-                                                        type="button" data-coupon-id="${coupon.id}">
+                                                <a th:href="@{|/coupon/add/${coupon.id}|}"
+                                                   class="btn btn-sm btn-primary couponBtn"
+                                                   type="button" data-coupon-id="${coupon.id}">
                                                     쿠폰 발급 받기
                                                 </a>
                                             </div>
