--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -53,7 +53,10 @@
 </div>
 
 <!-- footer(수정필요)-->
-<!--<div th:replace="~{footer :: footerFragment}">테스트</div>-->
+<!--<section class="footer_main">-->
+<!--    <div th:replace="~{footer :: footerFragment}"></div>-->
+<!--</section>-->
+
 <!-- script -->
 <script type="text/javascript" src="/js/main/bootstrap.bundle.min.js"></script>
 <script src="/js/main/jquery-1.11.0.min.js"></script>
