--- a/src/main/resources/templates/book/book_detail.html
+++ b/src/main/resources/templates/book/book_detail.html
@@ -41,19 +41,17 @@
                         </div>
                     </div>
                 </div>
-                <div>
+                <div style="margin-top:60px;">
                     <div class="pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom"
                          style="width: 100%; padding-left:10px;">
-                        <h5>쿠폰 받기</h5>
+                        <h5>쿠폰</h5>
                         <div class="card my-3">
                             <div class="card-body">
-                                쿠폰 내용
-                                <div class="card-text" style="white-space: pre-line;">
-                                    홈페이지 오픈 기념 이벤트 중 입니다
+                                <p style="color:black;">홈페이지 오픈 기념 이벤트 중 입니다</p>
+                                <div>
+                                    <p>쿠폰 발급 받으세요</p>
                                 </div>
-                            </div>
-                            <div>
-                                <p>신간 책 이벤트 중입니다</p>
+                                <a class="btn btn-sm btn-primary" th:href="@{/coupon/list}">쿠폰 받기</a>
                             </div>
                         </div>
                     </div>
@@ -77,12 +75,12 @@
             </div>
         </div>
         <div class="book_middle-section">
-            <div id="header" class="book_navbar header-scrolled text-black bg-light">
+            <nav class="book_navbar header-scrolled text-black bg-light">
                 <div class="book_nav-container">
-                    <a href="#ebook_info" class="card-body btn btn-light" onclick="activateSection('ebook_info')">
+                    <a href="#ebook_info" class="card-body btn btn-light">
                         도서정보
                     </a>
-                    <a href="#review_info" class="card-body btn btn-light" onclick="activateSection('review_info')">
+                    <a href="#review_info" class="card-body btn btn-light">
                         리뷰
                     </a>
                     <div class="card-body" style="font-size:20px; color: red;">
@@ -95,7 +93,7 @@
                             담기</a>
                     </div>
                 </div>
-            </div>
+            </nav>
             <div id="ebook_info" class="book_info">
                 <div class="title_book" style="padding-top:5px;">
                     <h5>판매자</h5>
@@ -132,15 +130,15 @@
                 <div id="review_info" class="pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom"
                      style="width: 100%;"></div>
                 <h2>회원 리뷰</h2>
-                <div id="review_info" class="pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom"
+                <div class="pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom"
                      style="width: 100%;"></div>
                 <div class="justify-content-end" style="margin-bottom:5px">
                     <!-- 리뷰 등록 폼 -->
                     <div class="review_form mb-3">
                         <label for="content" class="form-label"></label>
                         <form th:action="@{|/review/create/${book.id}|}" method="post">
-        <textarea name="content" id="content" class="form-control" rows="3"
-                  placeholder="책에 대한 스포일러 및 심한 욕설은 제외됩니다"></textarea>
+                            <textarea name="content" id="content" class="form-control" rows="3"
+                             placeholder="책에 대한 스포일러 및 심한 욕설은 제외됩니다"></textarea>
                             <div class="rating">
                                 <input type="hidden" name="rating" id="rating-value" value="0">
                                 <span class="star" data-value="1">&#9733;</span>
@@ -158,7 +156,7 @@
                     <div class="a_comment_top">
                         <ul th:each="review : ${reviewList}">
                             <li>
-                                <div id="review_info"
+                                <div
                                      class="pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom"
                                      style="width: 100%;">
                                     <div class="review-box mb-2">
@@ -300,12 +298,12 @@
                     </script>
                     <script>
                         document.addEventListener('DOMContentLoaded', function () {
-    const reviewStars = document.querySelectorAll('.review_form .star'); // 리뷰 작성 별점
-    const modifyStars = document.querySelectorAll('.a_comment_top .star'); // 리뷰 수정 별점
+                        const reviewStars = document.querySelectorAll('.review_form .star'); // 리뷰 작성 별점
+                        const modifyStars = document.querySelectorAll('.a_comment_top .star'); // 리뷰 수정 별점
 
-    reviewStars.forEach(star => {
-        star.addEventListener('mouseover', () => {
-            const value = parseInt(star.getAttribute('data-value'));
+                         reviewStars.forEach(star => {
+                         star.addEventListener('mouseover', () => {
+                        const value = parseInt(star.getAttribute('data-value'));
 
             // 선택된 별의 인덱스까지만 활성화
             reviewStars.forEach((s, index) => {
@@ -412,93 +410,93 @@
                     </style>
 
                     <!-- 장바구니,찜 기능 -->
-        <script>
-            $(document).ready(function () {
-            $(".addWish").click(function () {
-                var bookId = this.id.split('_')[1];
+                    <script>
+                        $(document).ready(function () {
+                        $(".addWish").click(function () {
+                            var bookId = this.id.split('_')[1];
 
-                Swal.fire({
-                    title: '찜 목록에',
-                    text: '해당 상품을 담으시겠습니까?',
-                    icon: 'warning',
-                    showCancelButton: true,
-                    confirmButtonColor: '#3085d6',
-                    cancelButtonColor: '#d33',
-                    confirmButtonText: '담기',
-                    cancelButtonText: '취소',
-                    preConfirm: () => {
-                        return new Promise((resolve) => {
-                            $.ajax({
-                                url: '/wish/add/' + bookId,
-                                type: 'GET',
-                                success: function (data) {
-                                      resolve(true);
-                                },
-                                error: function () {
-                                    resolve(false);
+                            Swal.fire({
+                                title: '찜 목록에',
+                                text: '해당 상품을 담으시겠습니까?',
+                                icon: 'warning',
+                                showCancelButton: true,
+                                confirmButtonColor: '#3085d6',
+                                cancelButtonColor: '#d33',
+                                confirmButtonText: '담기',
+                                cancelButtonText: '취소',
+                                preConfirm: () => {
+                                    return new Promise((resolve) => {
+                                        $.ajax({
+                                            url: '/wish/add/' + bookId,
+                                            type: 'GET',
+                                            success: function (data) {
+                                                  resolve(true);
+                                            },
+                                            error: function () {
+                                                resolve(false);
+                                            }
+                                        });
+                                    });
+                                }
+                            }).then((result) => {
+                                if (result.isConfirmed) {
+                                    // SweetAlert2 확인 버튼을 누르면 실행되는 부분
+                                    Swal.fire(
+                                        '찜 목록에 상품을 담았습니다.',
+                                        '',
+                                        'success'
+                                    ).then(() => {
+                                        window.location.href = '/book/detail/' + bookId;
+                                    });
                                 }
                             });
                         });
-                    }
-                }).then((result) => {
-                    if (result.isConfirmed) {
-                        // SweetAlert2 확인 버튼을 누르면 실행되는 부분
-                        Swal.fire(
-                            '찜 목록에 상품을 담았습니다.',
-                            '',
-                            'success'
-                        ).then(() => {
-                            window.location.href = '/book/detail/' + bookId;
-                        });
-                    }
-                });
-            });
-        });
-        </script>
-        <script>
-            $(document).ready(function () {
-             $(".addCartItem").click(function () {
-            var bookId = this.id.split('_')[1];
+                    });
+                    </script>
+                    <script>
+                        $(document).ready(function () {
+                         $(".addCartItem").click(function () {
+                        var bookId = this.id.split('_')[1];
 
-            Swal.fire({
-                title: '장바구니에',
-                text: '해당 상품을 담으시겠습니까?',
-                icon: 'warning',
-                showCancelButton: true,
-                confirmButtonColor: '#3085d6',
-                cancelButtonColor: '#d33',
-                confirmButtonText: '담기',
-                cancelButtonText: '취소',
-                preConfirm: () => {
-                    return new Promise((resolve) => {
-                        // Ajax 요청을 통한 서버에서의 삭제 작업
-                        $.ajax({
-                            url: '/cartitem/add/' + bookId,
-                            type: 'GET',
-                            success: function (data) {
-                                  resolve(true);
-                            },
-                            error: function () {
-                                resolve(false);
+                        Swal.fire({
+                            title: '장바구니에',
+                            text: '해당 상품을 담으시겠습니까?',
+                            icon: 'warning',
+                            showCancelButton: true,
+                            confirmButtonColor: '#3085d6',
+                            cancelButtonColor: '#d33',
+                            confirmButtonText: '담기',
+                            cancelButtonText: '취소',
+                            preConfirm: () => {
+                                return new Promise((resolve) => {
+                                    // Ajax 요청을 통한 서버에서의 삭제 작업
+                                    $.ajax({
+                                        url: '/cartitem/add/' + bookId,
+                                        type: 'GET',
+                                        success: function (data) {
+                                              resolve(true);
+                                        },
+                                        error: function () {
+                                            resolve(false);
+                                        }
+                                    });
+                                });
+                            }
+                        }).then((result) => {
+                            if (result.isConfirmed) {
+                                // SweetAlert2 확인 버튼을 누르면 실행되는 부분
+                                Swal.fire(
+                                    '장바구니에 상품을 담았습니다.',
+                                    '',
+                                    'success'
+                                ).then(() => {
+                                    window.location.href = '/book/detail/' + bookId;
+                                });
                             }
                         });
                     });
-                }
-            }).then((result) => {
-                if (result.isConfirmed) {
-                    // SweetAlert2 확인 버튼을 누르면 실행되는 부분
-                    Swal.fire(
-                        '장바구니에 상품을 담았습니다.',
-                        '',
-                        'success'
-                    ).then(() => {
-                        window.location.href = '/book/detail/' + bookId;
-                    });
-                }
-            });
-        });
-    });
-        </script>
-    </div>
-</div>
+                });
+                    </script>
+                </div>
+            </div>
 </html>
