--- a/src/main/resources/templates/cartitem/cart_list.html
+++ b/src/main/resources/templates/cartitem/cart_list.html
@@ -45,9 +45,10 @@
                             <th scope="col" style="text-align:center;">상품정보</th>
                             <th scope="col" style="text-align:center;">가격</th>
                             <th scope="col" style="text-align:center;">주문</th>
+                            <th scope="col" style="text-align:center;">삭제</th>
                         </tr>
                         </thead>
-                        <tbody>
+                        <tbody style="vertical-align: middle;">
                         <tr th:each="book : ${bookList}">
                             <td>
                                 <div class="form-check">
@@ -59,7 +60,8 @@
                             <td>
                                 <div class="d-flex">
                                     <div style="width:120px; height:120px;">
-                                        <img th:src="@{|/file/${book.thumbnailImg}|}" alt="사진" style="width: 120px; height: 120px;">
+                                        <img th:src="@{|/file/${book.thumbnailImg}|}" alt="사진"
+                                             style="width: 120px; height: 120px;">
                                     </div>
                                     <div style="margin-left: 50px; justify-content:center;">
                                         <div>
@@ -68,12 +70,14 @@
                                             </div>
                                             <div class="d-flex">
                                                 <p style="font-size: 1.0em;">정가 </p>
-                                                <del style="margin-left:10px; color:var(--gray-color-500);" th:text="${book.price  + ' 원'}"></del>
+                                                <del style="margin-left:10px; color:var(--gray-color-500);"
+                                                     th:text="${#numbers.formatInteger(book.price, 0, 'COMMA')} + ' 원'"></del>
                                             </div>
                                             <div class="d-flex">
                                                 <p style="font-size: 1.0em; color:black;">할인가</p>
                                                 <div class="d-flex" style="color:red;">
-                                                    <div style="margin-left:10px; margin-right:10px;" th:text="${book.discountPrice}  + ' 원'"></div>
+                                                    <div style="margin-left:10px; margin-right:10px;"
+                                                         th:text="${#numbers.formatInteger(book.discountPrice, 0, 'COMMA')} + ' 원'"></div>
                                                     <div th:text=" ' ( ' + ${book.discount} +'  % 할인' + ' ) ' "></div>
                                                 </div>
                                             </div>
@@ -81,26 +85,109 @@
                                     </div>
                                 </div>
                             </td>
-                            <td th:text="${book.discountPrice  + ' 원'}"></td>
-                            <td style="align-items:center;">
+                            <td style="text-align:center;"
+                                th:text="${#numbers.formatInteger(book.discountPrice, 0, 'COMMA')} + ' 원'"></td>
+                            <td style="text-align:center;">
                                 <div class="btn btn-sm btn-outline-secondary">
                                     <a th:href="@{/orders/order/list}">주문</a>
                                 </div>
+                            </td>
+                            <td style="text-align:center;">
                                 <div class="btn btn-sm btn-outline-secondary">
                                     <a class="cartItemDelete" th:id="'cartItemDelete_' + ${book.id}">삭제</a>
                                 </div>
                             </td>
                         </tr>
                         </tbody>
+                        <thead>
+                        <tr>
+                            <th></th>
+                            <th scope="col" style="text-align:center;">쿠폰 이름</th>
+                            <th scope="col" style="text-align:center;">쿠폰 할인가</th>
+                            <th scope="col" style="text-align:center;">상세내용 보기</th>
+                            <th scope="col" style="text-align:center;">쿠폰 사용</th>
+                        </tr>
+                        </thead>
+                        <tbody style="vertical-align: middle; text-align:center;">
+                        <tr th:each="coupon : ${couponList}">
+                            <td></td>
+                            <td>
+                                <span class="coupon-title" th:text="${coupon.title}"></span>
+                            </td>
+                            <td>
+                                <div class="coupon-discount" th:text="${#numbers.formatInteger(coupon.discount_price, 0, 'COMMA')} + ' 원'"></div>
+                            </td>
+                            <td>
+                                <button type="button" class="btn btn-sm btn-outline-secondary" th:data-bs-toggle="'modal'" th:data-bs-target="'#modal-'+${coupon.id}">
+                                    상세 내용
+                                </button>
+                                <!-- Modal -->
+                                <div class="modal fade" th:id="'modal-'+${coupon.id}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h1 class="modal-title fs-5" th:text="${coupon.title}"></h1>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <div style="width:100%; height:225px;">
+                                                    <img th:src="@{|/file/${coupon.thumbnailImg}|}" alt="사진" style="width:100%; height:100%;">
+                                                </div>
+                                                <div class="card-text" style="margin-top:30px;" th:text="${coupon.content}"></div>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">확인</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="btn btn-sm btn-outline-secondary coupon-use-btn" style="text-align:center;">
+                                    <a>쿠폰 사용</a>
+                                </div>
+                            </td>
+                        </tr>
+                        </tbody>
+                        <tbody>
+                        <tr style="text-align:center;">
+                            <td>구매 수량</td>
+                            <td>쿠폰 사용</td>
+                            <td>총 가격</td>
+                            <td>총 할인</td>
+                            <td>결제 금액</td>
+                        </tr>
+                        </tbody>
+                        <tfoot style="vertical-align: middle; text-align:center;">
+                        <tr>
+                            <td th:text="${cartItemCount}"></td>
+                            <td>
+                                <span id="coupon-name"></span>
+                                <span id="coupon-discount"></span>
+                            </td>
+                            <td th:text="${#numbers.formatInteger(total_price, 0, 'COMMA')} + ' 원'"></td>
+                            <td th:text="${#numbers.formatInteger(total_price - total_discount, 0, 'COMMA')} + ' 원'"></td>
+                            <td th:text="${#numbers.formatInteger(total_discount, 0, 'COMMA')} + ' 원'"></td>
+                        </tr>
+                        </tfoot>
                     </table>
                 </div>
             </form>
         </div>
     </div>
-    <script type="text/javascript" src="/js/cart/cart.js"></script>
-    <script>
+    <script th:inline="javascript">
+        $(document).ready(function() {
+            $('.coupon-use-btn').click(function() {
 
+                var couponName = $(this).closest('tr').find('.coupon-title').text();
+                var couponDiscount = $(this).closest('tr').find('.coupon-discount').text();
+
+                $('#coupon-name').text(couponName);
+                $('#coupon-discount').text(couponDiscount);
+            });
+        });
     </script>
+    <script type="text/javascript" src="/js/cart/cart.js"></script>
 </div>
 
 </html>
